@@ -1,4 +1,4 @@
 DIST getdate_rfc868-1.2.tar.gz 8323 RMD160 735b2efc16a87c9dd87bf1219137f0166a12a2e7 SHA1 eb10d753888fc7e81446354f06701add053de24d SHA256 45a9a6bdfe0fcde29a03704ffac2fbcd39014f412eb5f4ad3da943827341fd8d
-EBUILD getdate-1.2.ebuild 928 RMD160 e675788711ea0239e9dc24adaeeadb1edc0e82e6 SHA1 f3091e1969e566717cb15484d0e16f5346e7a845 SHA256 357b9f894472875c0fd6fc5e58d24210ed963a6b3e396736d03546d177841841
-MISC ChangeLog 1665 RMD160 003060fbca013f59247d0012ad2cca14dd46bf14 SHA1 ccdd67139bc9eba18332c365e95dc15cca0797a0 SHA256 c6f900820ba612abb44bcf8bcb24bb163ae4636c3e65038b762d17c3a3b1cd33
+EBUILD getdate-1.2.ebuild 963 RMD160 dad69613b11b2094d8165526806af67d8f400b00 SHA1 207404a59adaf50a54280a45971b608baf04074a SHA256 59588270ce67b4c1f1198568b505b32bfa842836b03d88714bc389de81e50cf5
+MISC ChangeLog 1832 RMD160 956f8a8f0f7a27d053cf45addd2627fd79ed3145 SHA1 5d4d43914ba7fc345ab3d8e1b3a0e490df67c89b SHA256 9e782b5e5510f03bc039782df0659b8b10af165a3126cd135ca91ca57452df30
 MISC metadata.xml 290 RMD160 b9b86283c09349c8827faef7d3ef5f724a248e77 SHA1 ae1c8e62d75c94ff50b8a5391afb6008460963aa SHA256 380e26e9262298b9cb31e863a9ab641f6fbdc8c50bda2cf2e47fd399f9cb5e85
