@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/getdate
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/getdate/ChangeLog,v 1.13 2009/09/23 19:35:47 patrick Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/getdate/ChangeLog,v 1.14 2010/08/10 08:08:33 xarthisius Exp $
+
+  10 Aug 2010; Kacper Kowalik <xarthisius@gentoo.org> getdate-1.2.ebuild:
+  Respect LDFLAGS wrt bug 331801. Thanks to Diego for report. Clean ebuild,
+  add ~amd64
 
   23 Sep 2009; Patrick Lauer <patrick@gentoo.org> getdate-1.2.ebuild:
   Remove virtual/libc
